<resources>
    <string name="app_name">My Application</string>
    <string name="First_Name">First Name</string>
    <string name="Mddle_Name">Middle Name</string>
    <string name="Middle_Name">Middle Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="DOB">DOB</string>
    <string name="save">save</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LOGIN">Login</string>
</resources>
